feat(assessment): check added assessments sum

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -10,3 +10,5 @@ email.valid=O email deve ser válido
 password.required=A senha é obrigatória
 password.size=A senha deve ter pelo menos 8 caracteres
 code.required=O código de verificação é obrigatório
+error.invalidAssessmentValue=O valor passado somado com as notas anteriores é maior que o valor máximo.
+error.minimumAssessmentValue=O valor mínimo deve ser maior ou igual a 1.
