--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -10,3 +10,5 @@ email.valid=Email should be valid
 password.required=Password is mandatory
 password.size=Password must be at least 8 characters long
 code.required=Verification code is mandatory
+error.invalidAssessmentValue=The sum of the passed value and previous grades exceeds the maximum allowed value.
+error.minimumAssessmentValue=The value should be greater than or equal to 1.
