feat(locale): add api messages

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -12,3 +12,30 @@ password.size=A senha deve ter pelo menos 8 caracteres
 code.required=O código de verificação é obrigatório
 error.invalidAssessmentValue=O valor passado somado com as notas anteriores é maior que o valor máximo.
 error.minimumAssessmentValue=O valor mínimo deve ser maior ou igual a 1.
+recovery=(Recuperação)
+error.assessment.nameRequired=O nome da avaliação é obrigatório
+error.assessment.nameSize=O nome da avaliação deve ter entre 2 e 20 caracteres
+error.class.nameSize=O nome da turma deve ter entre 2 e 20 caracteres
+error.class.minimumGrade=A nota mínima deve estar entre 1 e 100.
+error.authentication.email=O e-mail é obrigatório.
+error.authentication.validEmail=O e-mail deve ser válido.
+error.authentication.password=A senha é obrigatória.
+error.authentication.passwordSize=A senha deve ter ao menos 8 caracteres.
+error.authentication.name=O nome é obrigatório.
+error.authentication.nameSize=O nome deve ter entre 2 e 100 caracteres.
+error.authentication.badCredentials=E-mail ou senha estão incorretos.
+error.refreshToken.notFound=Token de atualização não encontrado
+error.refreshToken.invalid=Token de atualização inválido ou expirado
+success.password.updated=Senha atualizada com sucesso
+error.class.notExistsArgument=Nenhum argumento válido fornecido
+error.invalid.email=O e-mail fornecido é inválido.
+error.required.email=O campo de e-mail é obrigatório.
+error.required.code=O campo de código é obrigatório.
+error.invalid.length=O código deve ter exatamente 6 caracteres.
+error.invalid.user=Não existe usuário com o email enviado.
+error.emailExists=Já existe uma conta com o email enviado.
+email.confirm.greeting=Olá!
+email.confirm.text-1=Seja bem-vindo ao aplicativo nota-certa!
+email.confirm.text-2=Clique no botão abaixo para confirmar sua conta:
+email.confirm.subject=Confirmar Conta
+email.confirm.warning=Se você não solicitou este e-mail, ignore-o.
