--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -12,3 +12,30 @@ password.size=Password must be at least 8 characters long
 code.required=Verification code is mandatory
 error.invalidAssessmentValue=The sum of the passed value and previous grades exceeds the maximum allowed value.
 error.minimumAssessmentValue=The value should be greater than or equal to 1.
+recovery=(Recovery)
+error.assessment.nameRequired=Assessment name is mandatory
+error.assessment.nameSize=Assessment name must be between 2 and 20 characters
+error.class.nameSize=Class name must be between 2 and 20 characters
+error.class.minimumGrade=The minimum grade must be between 1 and 100.
+error.authentication.email=Email is mandatory
+error.authentication.validEmail=Email should be valid
+error.authentication.password=Password is mandatory
+error.authentication.passwordSize=Password must be at least 8 characters long
+error.authentication.name=Name is mandatory
+error.authentication.nameSize=Name must be between 2 and 100 characters
+error.authentication.badCredentials=Invalid email or password.
+error.refreshToken.notFound=Refresh token not found
+error.refreshToken.invalid=Invalid or expired refresh token
+success.password.updated=Password updated successfully
+error.class.notExistsArgument=No valid argument provided
+error.invalid.email=The provided email is invalid.
+error.required.email=The email field is mandatory.
+error.required.code=The code field is mandatory.
+error.invalid.length=The code must be exactly 6 characters long.
+error.emailExists=An account with the provided email already exists.
+error.invalid.user=There is no user with the provided email.
+email.confirm.greeting=Hello!
+email.confirm.text-1=Welcome to the Nota-Certa app!
+email.confirm.text-2=Click the button below to confirm your account:
+email.confirm.subject=Confirm Account
+email.confirm.warning=If you did not request this email, please ignore it.
