feat: implement delete account functionality

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -39,3 +39,4 @@ email.confirm.text-1=Seja bem-vindo ao aplicativo nota-certa!
 email.confirm.text-2=Clique no botão abaixo para confirmar sua conta:
 email.confirm.subject=Confirmar Conta
 email.confirm.warning=Se você não solicitou este e-mail, ignore-o.
+error.user.notFound=Não existe usuário com o email informado.
