--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -39,3 +39,4 @@ email.confirm.text-1=Welcome to the Nota-Certa app!
 email.confirm.text-2=Click the button below to confirm your account:
 email.confirm.subject=Confirm Account
 email.confirm.warning=If you did not request this email, please ignore it.
+error.user.notFound=There is no user with the provided email.
