feat: add accept privacy policy to teacher entity

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -40,3 +40,4 @@ email.confirm.text-2=Clique no botÃ£o abaixo para confirmar sua conta:
 email.confirm.subject=Confirmar Conta
 email.confirm.warning=Se vocÃª nÃ£o solicitou este e-mail, ignore-o.
 error.user.notFound=NÃ£o existe usuÃ¡rio com o email informado.
+error.authentication.acceptPolicy=Só é possível se inscrever ao aceitar a política de privacidade
