--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -40,3 +40,4 @@ email.confirm.text-2=Click the button below to confirm your account:
 email.confirm.subject=Confirm Account
 email.confirm.warning=If you did not request this email, please ignore it.
 error.user.notFound=There is no user with the provided email.
+error.authentication.acceptPolicy=You can only register if you accept the privacy policy.
